<resources>
    <string name="app_name">Today\'s Mausam</string>


    <string name="enter_your_city">Enter Your city</string>
    <string name="todays_weather">TODAYS WEATHER</string>
    <string name="button">Get Weather</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="high_35_c">High : 35°C</string>
    <string name="low_25_c">Low : 25°C</string>
    <string name="humidity_34">Humidity: 34%</string>
</resources>